--- a/Productos.html
+++ b/Productos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tienda Online - Spa Harmony</title>
-  <link rel="stylesheet" href="productos.css">
+  <link rel="stylesheet" href="css/productos.css">
 </head>
 <body>
 
@@ -22,7 +22,6 @@
     </nav>
   </header>
 
-  <!-- Barra de búsqueda y filtro -->
   <section class="filtros">
     <input type="text" id="buscar" placeholder="Buscar producto...">
     <select id="categoria">
@@ -36,13 +35,12 @@
   </section>
 
   <main id="contenedor-productos">
-    <!-- Los productos se generarán con JS -->
   </main>
 
   <footer>
     <p>&copy; 2025 Spa Harmony - Todos los derechos reservados</p>
   </footer>
 
-  <script src="productos.js"></script>
+  <script src="js/productos.js"></script>
 </body>
 </html>
