--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spa Spike</title>
-    <link rel="stylesheet" href="../spa Spike/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 
     <header>
         <div class="logo">
-            <img src="../spa Spike/imagenes/logosintexto.svg" alt="Spa Spike">
+            <img src="imagenes/logosintexto.svg" alt="Spa Spike">
             <h1>Spa Spike</h1>
         </div>
         <nav>
             <ul>
-                <li><a href="../spa Spike/index.html">INICIO</a></li>
-                <li><a href="../spa Spike/SobreNosotros.html">NOSOTROS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="SobreNosotros.html">NOSOTROS</a></li>
                 <li><a href="">PRODUCTOS</a></li>
-                <li><a href="../spa Spike/registro.html">RESERVACION</a></li>
-                <li><a href="../spa Spike/sala.html">SALA DE SPA</a></li>
+                <li><a href="registro.html">RESERVACION</a></li>
+                <li><a href="sala.html">SALA DE SPA</a></li>
             </ul>
             <div class="search-container">
                 <input type="text" id="search" placeholder="Buscar...">
@@ -32,28 +32,28 @@
 
     <section class="banner">
         <p>Relájate, renueva tu energía y descubre el bienestar que mereces.</p>
-        <img src="../spa Spike/imagenes/imagen1.png" alt="Spa">
+        <img src="imagenes/imagen1.png" alt="Spa">
     </section>
 
     <section class="servicios">
         <h2>Nuestros productos y servicios</h2>
         <div class="cards">
             <div class="card">
-                <img src="../spa Spike/imagenes/1.png" alt="Tratamientos Faciales">
+                <img src="imagenes/1.png" alt="Tratamientos Faciales">
                 <div class="overlay">
                     <h3>TRATAMIENTOS FACIALES</h3>
                     <button class="btn">VER MÁS</button>
                 </div>
             </div>
             <div class="card">
-                <img src="../spa Spike/imagenes/2.png" alt="Reducción de Peso">
+                <img src="imagenes/2.png" alt="Reducción de Peso">
                 <div class="overlay">
                     <h3>REDUCCIÓN DE PESO Y MEDIDAS</h3>
                     <button class="btn">VER MÁS</button>
                 </div>
             </div>
             <div class="card">
-                <img src="../spa Spike/imagenes/3.png" alt="Certificado de Regalo">
+                <img src="imagenes/3.png" alt="Certificado de Regalo">
                 <div class="overlay">
                     <h3>CERTIFICADO DE REGALO</h3>
                     <button class="btn">VER MÁS</button>
@@ -65,7 +65,7 @@
     
     <section class="about">
         <div class="about-text">
-            <img src="../spa Spike/imagenes/logo.svg" alt="Spa Spike">
+            <img src="imagenes/logo.svg" alt="Spa Spike">
             <h2>Un refugio de paz donde la naturaleza y el bienestar se encuentran..</h2>
             <p>
                 En Spa Spike creemos que el bienestar comienza cuando el cuerpo se relaja y la mente se libera.
@@ -74,7 +74,7 @@
             </p>
         </div>
         <div class="about-img">
-            <img src="../spa Spike/imagenes/4.png" alt="Masaje relajante">
+            <img src="imagenes/4.png" alt="Masaje relajante">
         </div>
     </section>
 
@@ -83,6 +83,6 @@
         <p>Copyright © 2020 Spa Spike El Salvador - All Rights Reserved / Designed by Meka Web</p>
     </footer>
 
-    <script src="../spa Spike/css/style.css"></script>
+    <script src="js/scrip.js"></script>
 </body>
 </html>
