--- a/registro.html
+++ b/registro.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Spa Natural Belleza · Interfaz SAO</title>
-  <link rel="stylesheet" href="../spa Spike/css/registro.css" />
+  <link rel="stylesheet" href="css/registro.css" />
 </head>
 <body>
   
   <header>
         <div class="logo">
-            <img src="../spa Spike/imagenes/logosintexto.svg" alt="Spa Spike">
+            <img src="imagenes/logosintexto.svg" alt="Spa Spike">
             <h1>Spa Spike</h1>
         </div>
         <nav>
             <ul>
-                <li><a href="../spa Spike/index.html">INICIO</a></li>
-                <li><a href="../spa Spike/SobreNosotros.html">NOSOTROS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="SobreNosotros.html">NOSOTROS</a></li>
                 <li><a href="#">PRODUCTOS</a></li>
-                <li><a href="../spa Spike/registro.html">RESERVACION</a></li>
-                <li><a href="../spa Spike/sala.html">SALA DE SPA</a></li>
+                <li><a href="registro.html">RESERVACION</a></li>
+                <li><a href="sala.html">SALA DE SPA</a></li>
             </ul>
             <div class="search-container">
   <input type="text" id="search" placeholder="Buscar...">
@@ -78,6 +78,6 @@
     <p>&copy; 2025 Spa Natural Belleza</p>
   </footer>
 
-  <script src="../Reservacion/js/registro.js"></script>
+  <script src="js/registro.js"></script>
 </body>
 </html>
