--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre Nosotros - Spa Spike</title>
-  <link rel="stylesheet" href="../spa Spike/css/sobrenosotros.css">
+  <link rel="stylesheet" href="css/sobrenosotros.css">
 </head>
 <body>
 
   <header>
         <div class="logo">
-            <img src="../spa Spike/imagenes/logosintexto.svg" alt="Spa Spike">
+            <img src="imagenes/logosintexto.svg" alt="Spa Spike">
             <h1>Spa Spike</h1>
         </div>
         <nav>
             <ul>
-                <li><a href="../spa Spike/index.html">INICIO</a></li>
-                <li><a href="../spa Spike/SobreNosotros.html">NOSOTROS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="SobreNosotros.html">NOSOTROS</a></li>
                 <li><a href="#">PRODUCTOS</a></li>
-                <li><a href="../spa Spike/registro.html">RESERVACION</a></li>
-                <li><a href="../spa Spike/sala.html">SALA DE SPA</a></li>
+                <li><a href="registro.html">RESERVACION</a></li>
+                <li><a href="sala.html">SALA DE SPA</a></li>
             </ul>
             <div class="search-container">
   <input type="text" id="search" placeholder="Buscar...">
@@ -50,7 +50,7 @@
       <button id="more-btn">Leer más</button>
     </div>
     <div class="about-img">
-      <img src="../spa Spike/imagenes/piedritas.jpg" alt="Imagen del Spa">
+      <img src="imagenes/piedritas.jpg" alt="Imagen del Spa">
     </div>
   </section>
 
@@ -77,6 +77,6 @@
     <p>© 2025 Spa Spike - Todos los derechos reservados</p>
   </footer>
 
-  <script src="../spa Spike/js/SobreNosotros.js"></script>
+  <script src="js/SobreNosotros.js"></script>
 </body>
 </html>
