--- a/sala.html
+++ b/sala.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sala de Spa - Spa Spike</title>
-  <link rel="stylesheet" href="../spa Spike/css/sala.css">
+  <link rel="stylesheet" href="css/sala.css">
 </head>
 <body>
   
    <header>
         <div class="logo">
-            <img src="../spa Spike/imagenes/logosintexto.svg" alt="Spa Spike">
+            <img src="imagenes/logosintexto.svg" alt="Spa Spike">
             <h1>Spa Spike</h1>
         </div>
         <nav>
             <ul>
-                <li><a href="../spa Spike/index.html">INICIO</a></li>
-                <li><a href="../spa Spike/SobreNosotros.html">NOSOTROS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="SobreNosotros.html">NOSOTROS</a></li>
                 <li><a href="#">PRODUCTOS</a></li>
-                <li><a href="../spa Spike/registro.html">RESERVACION</a></li>
-                <li><a href="../spa Spike/sala.html">SALA DE SPA</a></li>
+                <li><a href="registro.html">RESERVACION</a></li>
+                <li><a href="sala.html">SALA DE SPA</a></li>
             </ul>
             <div class="search-container">
   <input type="text" id="search" placeholder="Buscar...">
@@ -46,15 +46,15 @@
 
     <section class="galeria">
       <div class="card">
-        <img src="../spa Spike/imagenes/Ambiente relajante con velas.jpg" alt="Spa 1">
+        <img src="imagenes/Ambiente relajante con velas.jpg" alt="Spa 1">
         <p>Ambiente relajante con velas</p>
       </div>
       <div class="card">
-        <img src="../spa Spike/imagenes/Espacios privados y cómodos.jpg" alt="Spa 2">
+        <img src="imagenes/Espacios privados y cómodos.jpg" alt="Spa 2">
         <p>Espacios privados y cómodos</p>
       </div>
       <div class="card">
-        <img src="../spa Spike/imagenes/Aromaterapia y tranquilidad.jpg" alt="Spa 3">
+        <img src="imagenes/Aromaterapia y tranquilidad.jpg" alt="Spa 3">
         <p>Aromaterapia y tranquilidad</p>
       </div>
     </section>
